fix: subcategory filters now left aligned

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -66,7 +66,6 @@ body {
 
     #filters > #filter-subcategories {
       margin-top: 1em;
-      text-align: left;
     }
 
       #filters > #filter-subcategories > .filter-subcategory {
